[tool.poetry]
name = "spark-streaming-project"
version = "0.1.0"
description = ""
authors = ["bele <belesemu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyspark = {extras = ["hive"], version = "^3.5.3"}
dash = "^2.18.1"
plotly = "^5.24.1"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
